Fix image ratio bug on Safari

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -330,6 +330,7 @@ $icon-size: 100px;
   flex-wrap: wrap-reverse;
 
   .profile {
+    height: 300px;
     width: 300px;
     margin-right: 20px;
   }
